# SimpleRXTest

./: CMakeLists.txt  SimpleRXTest.cxx  do_experiment.sh  plot_rings.cmd
